--- a/survey/core/templates/core/report_detail.html
+++ b/survey/core/templates/core/report_detail.html
@@ -34,9 +34,17 @@
                      {% if object.date %}
                     <small class="site_icon_float" style=""><i class="la la-clock-o"
                                                                aria-hidden="true"></i>{{ object.date }}
-                    </small><br>{% endif %}
+                    </small><br>
+
+                     {% endif %}
 
                 </li>
+        {% if object.photo %}
+            <img src="{{ object.photo.url }}" alt="">
+
+
+        {% endif %}
+
 
 
         </ul>
