--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -115,7 +115,7 @@
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
                                 <h4><a href="#" title="">Steps</a></h4>
-                                <a href="{% url 'core:site-steps' 0 site.pk %}" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                <a href="{% url 'core:site_steps_create' object.id %}" title="" class="btn btn-sm btn-xs btn-primary"><i
                                         class="la la-plus"></i> Add New Step</a>
                             </div>
 
