--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -108,7 +108,7 @@
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
                                 <h4><a href="#" title="">Construction Steps</a></h4>
-                                <a href="{% url 'core:category_create' project.pk %}" title=""
+                                <a href="{% url 'core:configure_project_steps' project.pk %}" title=""
                                    class="btn btn-sm btn-xs btn-primary"><i class="la la-plus"></i>Configure Steps</a>
                                 <a href="{% url 'core:material_create' project.pk %}" title=""
                                    class="btn btn-sm btn-xs btn-primary"><i class="la la-plus"></i>New Substeps</a>
