--- a/survey/core/templates/core/construction_sitesteps_form.html
+++ b/survey/core/templates/core/construction_sitesteps_form.html
@@ -1,7 +1,8 @@
-{% extends 'base.html' %}
+{% extends '_base.html' %}
 
 {% block content %}
 <form action="" method="post">{% csrf_token %}
+
     {{form.as_p}}
 
     <input type="submit">
