--- a/survey/core/templates/core/configure_project_steps_form.html
+++ b/survey/core/templates/core/configure_project_steps_form.html
@@ -4,10 +4,8 @@
 <div class="row no-gutters">
         <div class="col-md-12">
             <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">{% if request.user.is_superuser %}
-                    <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
-                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
-                    {% endif %}
+                <ol class="breadcrumb">
+
                     <li class="breadcrumb-item active" aria-current="page">Create Step</li>
                 </ol>
             </nav>
