construction steps and substeps api

--- a/survey/core/templates/core/construction_sitesteps_form.html
+++ b/survey/core/templates/core/construction_sitesteps_form.html
@@ -2,8 +2,17 @@
 
 {% block content %}
 <form action="" method="post">{% csrf_token %}
+<h5>Site Construction steps</h5>
+    <ul id="id_construction_steps">
+        {% for step in construction_steps %}
+        <li><label for="id_construction_steps_{{forloop.counter0}}"><input type="checkbox" name="construction_steps" value="{{step.id}}"
+                                                        id="id_construction_steps_{{forloop.counter0}}">
+            {{step}}</label>
 
-    {{form.as_p}}
+        </li>
+        {% endfor %}
+
+    </ul>
 
     <input type="submit">
 
