--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -110,7 +110,7 @@
                                 <h4><a href="#" title="">Construction Steps</a></h4>
                                 <a href="{% url 'core:configure_project_steps' project.pk %}" title=""
                                    class="btn btn-sm btn-xs btn-primary"><i class="la la-plus"></i>Configure Steps</a>
-                                <a href="{% url 'core:material_create' project.pk %}" title=""
+                                <a href="{% url 'core:construction_substep_create' project.pk %}" title=""
                                    class="btn btn-sm btn-xs btn-primary"><i class="la la-plus"></i>New Substeps</a>
                             </div>
                             <div class="widget-body">
