modify to old serializers

--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -136,7 +136,7 @@
                                                      aria-labelledby="{{ step.pk }}"
                                                      data-parent="#accordion">
                                                     <ul class="guideline-list">
-                                                        {% for sub_step in step.step.sub_steps.all %}
+                                                        {% for sub_step in step.step.materials.all %}
 
 
 
