--- a/survey/core/templates/core/construction_substep_form.html
+++ b/survey/core/templates/core/construction_substep_form.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 
 {% block content %}
-<form action="" method="post">{% csrf_token %}
+<form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
 
     {{form.as_p}}
 
