--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -48,7 +48,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="btnGroupDrop2">
                                 <a class="dropdown-item"
-                                   href="{% url 'userrole:field_engineer_create' object.pk %}"><i
+                                   href="{% url 'userrole:assign_field_engineer' object.pk %}"><i
                                         class="la la-user"></i> People</a>
                                 <a class="dropdown-item"
                                    href="{% url 'core:document_list' site.pk %}"><i
