--- a/survey/core/templates/core/construction_site_steps_list.html
+++ b/survey/core/templates/core/construction_site_steps_list.html
@@ -2,17 +2,95 @@
 
 {% block content %}
 
-  <div class="d-flex justify-content-center" style="margin-top: 20px">
-        <div class="col-md-2 col-lg-5">
-            <div class="dash-right">
-                <div class="widget-info margin-top-large">
-    <h3>{{site}} Steps List</h3>
-    {% for step in site_steps %}
-    {{forloop.counter}}. {{step}} <a href="{% url 'core:construction_site_steps_delete' step.pk %}">Delete</a><br>
-    {% empty %}
-    <p>
-        No site steps.
-    </p>
-    {% endfor %}
-                </div></div></div></div>
+<div class="d-flex justify-content-center" style="margin-top: 20px">
+    <div class="col-md-2 col-lg-5">
+        <div class="dash-right">
+            <div class="widget-info margin-top-large">
+                <h3>{{site}} Steps List</h3>
+
+                <p>
+                <form action="" method="">
+                    <ul id="id_step_checked">
+                        {% for step in checked_steps %}
+                        <label for="id_checked_step_{{ forloop.counter0 }}"><input type="checkbox"
+                                                                                                name="checked_step"
+                                                                                                value="{{ step.step__name }}"
+                                                                                                checked
+                                                                                                id="id_checked_step_{{ forloop.counter0 }}"
+                                                                                                class="chk"
+                        >
+                            {{ step.step__name}} </label><br>
+
+
+                        {% endfor %}
+                        {% for step in unchecked_steps %}
+                        <label for="id_unchecked_step_{{ forloop.counter0 }}"><input type="checkbox"
+                                                                                                  name="unchecked_step"
+                                                                                                  value="{{ step.name }}"
+                                                                                                  id="id_unchecked_step_{{ forloop.counter0 }}"
+                                                                                                  class="chk"
+                        >
+                            {{ step.name }}</label><br>
+
+
+                        {% endfor %}
+                        <button type="button" id="refresh" class="btn-primary"> Update</button>
+
+
+                    </ul>
+
+                </form>
+                </p>
+
+
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
+
+{% block extra_script %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
+    <script>
+        let baseUrl = 'http://localhost:8000/';
+        //let baseUrl = 'http://vca.naxa.com.np/';
+
+        $(".chk").on("click", function () {
+            var value = $(this).attr('value');
+            var current_url = document.URL;
+            var site_id = current_url.split('/')[5];
+
+            if ($(this).is(":checked")) {
+                var checkbox_value = 1;
+                console.log(checkbox_value);
+            }
+            else {
+                var checkbox_value = 0;
+                console.log(checkbox_value);
+
+            }
+
+            $.ajax({
+                url: baseUrl + 'core/api/construction-site-steps-update/',
+                data: {
+                    'value': value,
+                    'checkbox_value': checkbox_value,
+                    'site_id': site_id,
+                },
+                dataType: 'json',
+                success: function (data) {
+                    //console.log(data);
+                }
+
+            })
+
+        });
+
+        // Refresh page after click
+        $('#refresh').click(function () {
+            location.reload();
+        });
+    </script>
+{% endblock %}
