get or create sitesteps using checkbox update

--- a/survey/core/templates/core/construction_site_steps_list.html
+++ b/survey/core/templates/core/construction_site_steps_list.html
@@ -54,8 +54,8 @@
 
 
     <script>
-        let baseUrl = 'http://localhost:8000/';
-        //let baseUrl = 'http://vca.naxa.com.np/';
+        //let baseUrl = 'http://localhost:8000/';
+        let baseUrl = 'http://bccms.naxa.com.np/';
 
         $(".chk").on("click", function () {
             var value = $(this).attr('value');
