checklist and report api update

--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -123,6 +123,9 @@
                             <a href="{% url 'core:construction_site_steps_list' site.id %}" title=""
                                class="btn btn-sm btn-xs btn-primary"><i
                                     class="la la-plus"></i> Update Step</a>
+                            <a href="{% url 'core:checklist_create' site.id %}" title=""
+                               class="btn btn-sm btn-xs btn-primary"><i
+                                    class="la la-plus"></i>Create Checklist</a>
                             {% else %}
                               <a href="{% url 'core:site_steps_create' object.id %}" title=""
                                class="btn btn-sm btn-xs btn-primary"><i
