image in construction step

--- a/survey/core/templates/core/checklist_form.html
+++ b/survey/core/templates/core/checklist_form.html
@@ -24,7 +24,9 @@
 
  <script>
 
-     var baseUrl = 'http://localhost:8009/';
+     //var baseUrl = 'http://localhost:8000/';
+     var baseUrl = 'http://bccms.naxa.com.np/';
+
 
     $("#id_step").change(function () {
       var stepId = $(this).val();
