--- a/survey/core/templates/core/construction_substep_form.html
+++ b/survey/core/templates/core/construction_substep_form.html
@@ -14,6 +14,20 @@
             })
 
         })
+
+     $(function() {
+            $(".inline.{{ good_photo_form.prefix }}").formset({
+                prefix: "{{ good_photo_form.prefix }}",
+            })
+
+        })
+
+     $(function() {
+            $(".inline.{{ bad_photo_form.prefix }}").formset({
+                prefix: "{{ bad_photo_form.prefix }}",
+            })
+
+        })
     </script>
 </head>
 
@@ -31,6 +45,38 @@
                 {% for form in primary_photo_form %}
                     {{ form.id }}
                     <div class="inline {{ primary_photo_form.prefix }}">
+                        {{ form.image.errors }}
+                        {{ form.image.label_tag }}
+                        {{ form.image }}
+
+
+                    </div>
+                {% endfor %}
+            </fieldset>
+
+              <fieldset>
+                <legend>Good Photo</legend>
+                {{ good_photo_form.management_form }}
+                {{ good_photo_form.non_form_errors }}
+                {% for form in good_photo_form %}
+                    {{ form.id }}
+                    <div class="inline {{ good_photo_form.prefix }}">
+                        {{ form.image.errors }}
+                        {{ form.image.label_tag }}
+                        {{ form.image }}
+
+
+                    </div>
+                {% endfor %}
+            </fieldset>
+
+              <fieldset>
+                <legend>Bad Photo</legend>
+                {{ bad_photo_form.management_form }}
+                {{ bad_photo_form.non_form_errors }}
+                {% for form in bad_photo_form %}
+                    {{ form.id }}
+                    <div class="inline {{ bad_photo_form.prefix }}">
                         {{ form.image.errors }}
                         {{ form.image.label_tag }}
                         {{ form.image }}
