--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -157,7 +157,7 @@
 
                                                 <li>
                                                     <h6>
-                                                        {{ sub_step.title }}
+                                                        <a href="{% url 'core:checklist' object.pk sub_step.pk %}">{{ sub_step.title }}</a>
                                                     </h6>
                                                     <small>
                                                     </small>
