--- a/survey/core/templates/core/checklist_form.html
+++ b/survey/core/templates/core/checklist_form.html
@@ -24,8 +24,8 @@
 
  <script>
 
-     var baseUrl = 'http://localhost:8000/';
-     //var baseUrl = 'http://bccms.naxa.com.np/';
+     //var baseUrl = 'http://localhost:8000/';
+     var baseUrl = 'http://bccms.naxa.com.np/';
 
 
     $("#id_step").change(function () {
